added target tuple loading to Server.py

--- a/web/chat/scripts/Dockerfile
+++ b/web/chat/scripts/Dockerfile
@@ -4,4 +4,4 @@ COPY Server.py /Server.py
 
 RUN pip install numpy
 
-CMD python /Server.py --client_dir /client/ --log_dir /log/
+CMD python /Server.py --client_dir /client/ --log_dir /log/ --house_target_fn /house_target_tuple.json
