--- a/web/chat/apache-config.conf
+++ b/web/chat/apache-config.conf
@@ -1,5 +1,8 @@
-<VirtualHost *:80>
+<VirtualHost *:443>
   DocumentRoot /var/www/site
+  SSLEngine on
+  SSLCertificateFile /etc/ssl/fullchain.pem
+  SSLCertificateKeyFile /etc/ssl/privkey.pem
 
   <Directory /var/www/site/>
       Options Indexes FollowSymLinks MultiViews
