--- a/web/chat/apache-config.conf
+++ b/web/chat/apache-config.conf
@@ -1,20 +1,20 @@
-<VirtualHost *:443>
-  DocumentRoot /var/www/site
-  SSLEngine on
-  SSLCertificateFile /etc/ssl/fullchain.pem
-  SSLCertificateKeyFile /etc/ssl/privkey.pem
+#<VirtualHost *:443>
+#  DocumentRoot /var/www/site
+#  SSLEngine on
+#  SSLCertificateFile /etc/ssl/fullchain.pem
+#  SSLCertificateKeyFile /etc/ssl/privkey.pem
 
-  <Directory /var/www/site/>
-      Options Indexes FollowSymLinks MultiViews
-      AllowOverride All
-      Order deny,allow
-      Allow from all
-  </Directory>
+#  <Directory /var/www/site/>
+#      Options Indexes FollowSymLinks MultiViews
+#      AllowOverride All
+#      Order deny,allow
+#      Allow from all
+#  </Directory>
 
-  ErrorLog ${APACHE_LOG_DIR}/error.log
-  CustomLog ${APACHE_LOG_DIR}/access.log combined
+#  ErrorLog ${APACHE_LOG_DIR}/error.log
+#  CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-</VirtualHost>
+#</VirtualHost>
 <VirtualHost *:80>
   DocumentRoot /var/www/site
 
